--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 							</div>
 							<div class="col-4 col-12-medium">
-
+ <h1>HOLA SOY LUCHO</h1>
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
