--- a/productos.html
+++ b/productos.html
@@ -63,11 +63,11 @@
 					<!-- Content -->
 						<article class = "products-container">
 
-							<div class = "box">
+							<div class = "products">
 								<img src="/images/bici1.jpg" alt="Urbana Crossway 40">
 							</div>
 
-							<div class="box">
+							<div class="products">
 								<h3>
 									Urbana Crossway 40
 								</h3>
@@ -81,11 +81,11 @@
 
 							</div>
 
-							<div class="box">
+							<div class="products">
 								<img src="/images/bici2.jpg" alt="Varela Competicion Aluminio ROdado 28">
 							</div>
 
-							<div class="box">
+							<div class="products">
 								<h3>
 									Varela Competicion Aluminio Rodado 28
 								</h3>
@@ -98,11 +98,11 @@
 								</p>										
 							</div>
 
-							<div class="box">
+							<div class="products">
 								<img src="/images/bici3.jpg" alt="Tanos Competicion Rodado 28">
 							</div>
 
-							<div class="box">
+							<div class="products">
 								<h3>
 									Thanos Competicion Rodado 28
 								</h3>
