--- a/productos.html
+++ b/productos.html
@@ -58,7 +58,7 @@
 
 			<!-- Main -->
 				<div id="main-wrapper">			
-						
+						<h1>Productos</h1>
 
 					<!-- Content -->
 						<article class = "products-container">
