Ajustes en maquetado contacto

--- a/contacto.html
+++ b/contacto.html
@@ -63,6 +63,7 @@
 							<!-- Content -->
 							<!-- Comienzo del formulario-->
 							<h2>Contacto</h2>
+							
 							<form action="https://ptsv2.com/t/jicaffo/post" method="GET" class="form-contacto">
 								<div class="horizontal">
 									<label for="nombre">Nombre: </label>	
@@ -81,12 +82,12 @@
 												<option value="otros">Otros</option>
 									</select>
 								</div>
-								<div class="horizonal">
+								<div class="horizontal">
 									<label for="mensaje">Mensaje: </label>
-									<textarea class="controls" name="Mensaje" cols="30" rows="10" id="mensaje"></textarea>
+									<textarea class="controls" name="Mensaje" cols="30" rows="5" id="mensaje"></textarea>
 								</div>
 
-                                <div class="horizonal">
+                                <div class="horizontal only-button">
 									<button class="botons" type="submit" name="Enviar">Enviar</button>
 								</div>
 							</form>	
@@ -94,7 +95,7 @@
 						
 							<h2>Mapa</h2>
 
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.025694714748!2d-58.38009258432071!3d-34.60351176499516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb18aae2784f%3A0x5b151f326a3f319e!2sAvenida%20Corrientes!5e0!3m2!1ses-419!2sar!4v1626391050642!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+							<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.5123024413547!2d-58.45005978432105!3d-34.59120486434413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f12e398ecd%3A0x98abf435fbfab70!2sAv.%20Corrientes%206237%2C%20C1427BPA%20CABA!5e0!3m2!1ses-419!2sar!4v1626398409021!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 						</div>
 					</div>
