Agregado comentarios posibles cambios útiles con respecto a Header sin modificar el código, agregado clases de bordes auxiliares en template original para pruebas

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 			<!-- Banner -->
 				<div id="banner-wrapper">
+					<!-- MODIFICACION JUAN: Envolver img en un div#banner.box.container permitiría achicar la imagen dejando el entramado visible atras. -->
 					<img src="/images/guayerdBikes-logo.jpg" alt="Banner de presentación de Guayerd Bikes">
 				</div>
 
