Modificaciones maquetado-Detalle en Trello

--- a/contacto.html
+++ b/contacto.html
@@ -62,7 +62,7 @@
 
 							<!-- Content -->
 							<!-- Comienzo del formulario-->
-							<h2>Contacto</h2>
+							<h2 id=padding>Contacto</h2>  <!--LUCHO-->
 							
 							<form action="https://ptsv2.com/t/jicaffo/post" method="GET" class="form-contacto">
 								<div class="horizontal">
@@ -78,7 +78,7 @@
 									<select class= "controls" name="Tema" id="tema">
 												<option value="venta">Venta</option>
 												<option value="trabajo">Trabajo</option>
-												<option value="reparacion">Repracion</option>
+												<option value="reparacion">Reparacion</option>
 												<option value="otros">Otros</option>
 									</select>
 								</div>
