--- a/productos.html
+++ b/productos.html
@@ -57,10 +57,15 @@
 				</div>
 
 			<!-- Main -->
-				<div id="main-wrapper">			
-						<h2>Productos</h2>
+				<div id="main-wrapper">
 
-					<!-- Content -->
+					<div class="container">
+
+						<h2 id=padding>
+							Productos
+						</h2>
+
+						<!-- Content -->
 						<article class = "products-container">
 
 							<div class = "products">
@@ -87,7 +92,7 @@
 
 							<div class="products">
 								<h3>
-									Varela Competicion Aluminio Rodado 28
+									Varela Competición Aluminio Rodado 28
 								</h3>
 								<p>
 									Bicicleta de competición hecha a medida con lo mejor, cuadro francés Huret talle 'M', cambios y mecánica Shimano (shifters,
@@ -104,7 +109,7 @@
 
 							<div class="products">
 								<h3>
-									Thanos Competicion Rodado 28
+									Thanos Competición Rodado 28
 								</h3>
 								<p>
 									Bicicleta de competición hecha a medida con lo mejor, cuadro francés Huret talle 'M', cambios y mecánica Shimano (shifters,
@@ -117,7 +122,7 @@
 
 						</article>
 
-						
+					</div>
 					
 				</div>
 
