--- a/index.html
+++ b/index.html
@@ -264,6 +264,13 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/one.js"></script>
+			<!-- <script src="assets/js/2.js"></script>
+			<script src="assets/js/3.js"></script>
+			<script src="assets/js/4.js"></script>
+			<script src="assets/js/5.js"></script>
+			<script src="assets/js/6.js"></script>
+			<script src="assets/js/7.js"></script> -->
 
 	</body>
 </html>
