--- a/productos.html
+++ b/productos.html
@@ -138,6 +138,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/1.js"></script>
 
 	</body>
 </html>
