--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/one.js"></script>
-			<!-- <script src="assets/js/2.js"></script>
-			<script src="assets/js/3.js"></script>
-			<script src="assets/js/4.js"></script>
-			<script src="assets/js/5.js"></script>
-			<script src="assets/js/6.js"></script>
-			<script src="assets/js/7.js"></script> -->
+			<script src="assets/js/two.js"></script>
+			<script src="assets/js/three.js"></script>
+			<script src="assets/js/four.js"></script>
+			<script src="assets/js/five.js"></script>
+			<script src="assets/js/six.js"></script>
+			<script src="assets/js/seven.js"></script>
 
 	</body>
 </html>
