--- a/productos.html
+++ b/productos.html
@@ -69,7 +69,7 @@
 						<article class = "products-container">
 
 							<div class = "products">
-								<img src="/images/bici1.jpg" alt="Urbana Crossway 40">
+								<img src="images/bici1.jpg" alt="Urbana Crossway 40">
 							</div>
 
 							<div class="products">
@@ -87,7 +87,7 @@
 							</div>
 
 							<div class="products">
-								<img src="/images/bici2.jpg" alt="Varela Competicion Aluminio ROdado 28">
+								<img src="images/bici2.jpg" alt="Varela Competicion Aluminio ROdado 28">
 							</div>
 
 							<div class="products">
@@ -104,7 +104,7 @@
 							</div>
 
 							<div class="products">
-								<img src="/images/bici3.jpg" alt="Tanos Competicion Rodado 28">
+								<img src="images/bici3.jpg" alt="Tanos Competicion Rodado 28">
 							</div>
 
 							<div class="products">
@@ -140,6 +140,7 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/one.js"></script>
 			<script src="assets/js/two.js"></script>
+			<script src="assets/js/five.js"></script>
 
 	</body>
 </html>
