Correcciones de alineación en home y productos. Agregado ofertas

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<!-- Banner -->
 				<div id="banner-wrapper">
 					<!-- MODIFICACION JUAN: Envolver img en un div#banner.box.container permitiría achicar la imagen dejando el entramado visible atras. -->
-					<img src="images/guayerdBikes-logo.jpg" alt="Banner de presentación de Guayerd Bikes">
+					<img src="images/guayerdBikes-logo.jpg" alt="Banner de presentación de Guayerd Bikes" id = "ancho-imagen-banner">
 				</div>
 
 			<!-- Main -->
@@ -74,187 +74,192 @@
 						<h2>
 							Guayerd Bikes
 						</h2>
-						<p>
-							Bill Jobs (1947-2003) fue el fundador de Guayerd Bikes. Un auténtico visionario que decidió
-							dedicar su vida a la bicicleta después de un viaje a EE.UU en los ’70. En dicho viaje Bill
-							encontró, en una tienda de bicicletas, un cartel en el que ponía que, debido a su baja
-							calidad, no se admitían bicicletas fabricadas en Argentina para su reparación.
-						</p>
-						<p>
-							Ese menosprecio hacia los productos del país de origen de Bill Jobs le llevó a abrir, la que
-							sería, la primera fábrica de Guayerd Bikes en 1972.
-						</p>
-						<p>
-							El sentido que Bill Jobs le daba a su vida era la de moverse con pasión y decisión. El
-							nombre de “Guayerd” no es casual, ya que surge de la unión de tres sílabas chinas
-							Gu-ah-yerd, cuyo significado evoca la fabricación de un producto de calidad, atractivo y
-							capaz de llevar a sus usuarios al destino de la forma más placentera posible.
-						</p>
-						<p>
-							Bill Jobs no habría sido el mismo si no hubiese llegado a cumplir su objetivo principal de
-							ofrecer bicicletas de calidad fabricadas en suelo argentino. Otro paso importante en su
-							carrera profesional fue el lanzamiento de GUAYERD como marca propia. A diferencia de
-							otros fabricantes, Guayerd Bikes si optó por apostar por su propia marca en la que quedaría
-							patente toda la filosofía del propio Jobs. Desde que Guayerd fue fundada como marca
-							independiente, todos los cuadros y bicicletas fabricadas bajo la marca taiwanesa debían
-							cumplir con tres premisas “Gu-ah-yerd”.
-						</p>
-						<p>
-							En 2013, GUAYERD cumplió su 25 aniversario, portando con orgullo la filosofía con la que
-							Bill Jobs fundase la primera fábrica en 1972.
-						</p>
-						<p>
-							Guayerd está consolidado como el segundo mayor fabricante de bicicletas, con una
-							producción anual total de más de 3 millones de bicicletas, producidas en las fábricas de
-							Argentina y China.
-						</p>
 
-						<h2>
-							Innovación
-						</h2>
-						<p>
-							La historia de cada bicicleta GUAYERD empieza sólo a 100km del lugar donde la historia de
-							la bicicleta comenzó en 1817. Justo a las afueras de Stuttgart, corazón de Alemania en
-							innovaciones del sector automovilístico y bastión de marcas líderes en tecnología como
-							Porsche o Mercedes-Benz, es donde tienen su base los diseñadores e ingenieros del
-							departamento de I+D de GUAYERD. Es aquí donde todas nuestras bicicletas se inventan,
-							planifican y desarrollan para su distribución internacional en 77 países.
-						</p>
-						<p>
-							Así, nuestros desarrolladores de producto no sólo tienen que tener en cuenta un montón de
-							diferentes requisitos técnicos, también tienen que garantizar que cada bicicleta de cada
-							categoría es completamente merecedora de llevar el nombre GUAYERD en sus tubos. Ya
-							se trate de una bici de montaña de alta gama, una de carretera en carbono para
-							competición, una bici eléctrica fiable o un modelo desenfadado para principiantes, sólo se
-							validan los mejores diseños que se fabricarán en colaboración con proveedores de primer
-							nivel. Para la fluidez de todos estos procesos tan estrechamente relacionados, el equipo de
-							I+D alemán viaja frecuentemente Taiwán.
-						</p>
-						<p>
-							Allí, nuestros expertos debaten y revisan con los especialistas taiwaneses cada paso: desde
-							el primer prototipo hasta el modelo de serie perfectamente acabado. Cada bicicleta que sale
-							completamente montada de una de las tres fábricas en Asia es realmente única. Porque
-							cuando una bici está camino a su nuevo dueño en cualquiera de los 77 países del mundo
-							en los que se distribuye GUAYERD, no sólo el departamento de I+D alemán ha infundido
-							vida en la bicicleta, sino que cada una de las personas involucradas en el proceso de
-							fabricación ha velado para que una genuina bicicleta se haya fabricado con el mayor
-							cuidado posible.
-						</p>
+						<article class = "contenedor-parrafos">	
 
-						<h2>
-							Bicis
-						</h2>
-						<p>
-							GUAYERD Industry Co.,Ltd, no sólo mira atrás con su experiencia de 40 años usando
-							aleaciones de materias primas clásicas que necesitan un elaborado procesamiento. Para
-							lograr la mayor calidad de bicicletas de carbono de gama alta, la compañía decidió trabajar
-							exclusivamente con proveedores de primera calidad especializados en materias
-							compuestas.
-						</p>
-						<p>
-							El sueño que Bill Jobs tuvo en la década de los 70 es hoy una realidad. Taiwán se ha
-							convertido en un “Silicon Valley” de la industria del ciclismo. Todas las grandes marcas del
-							sector aspiran a fabricar sus bicicletas o componentes en Taiwán y ya nunca más se volverá
-							a ver un cartel en el que se rechacen productos del país asiático por su escasa calidad.
-							En sus más de 25 años de historia GUAYERD ha logrado éxitos de todo tipo, desde
-							Campeonatos del Mundo, Oros Olímpicos, reconocimientos como la mejor empresa
-							Taiwanesa e incluso reconocimientos al propio producto. En el año 2016 GUAYERD, con su
-							cuadro Scultura LTD, puso en el mercado la bicicleta de producción más ligera del mundo
-							con un peso total de solo 4,55kg y un peso del cuadro inferior a los 800g. Pero GUAYERD
-							no necesita que nadie apruebe o de el visto bueno a sus productos. Nosotros somos los que
-							mejor conocemos nuestra marca, la calidad de nuestros productos y el desarrollo que
-							implican y por ello GUAYERD ofrece garantía de por vida en todos sus cuadros, porque
-							nadie confía en nuestras bicicletas más que nosotros.
-						</p>
+							<p class = "alinear-parrafos-index">
+								Bill Jobs (1947-2003) fue el fundador de Guayerd Bikes. Un auténtico visionario que decidió
+								dedicar su vida a la bicicleta después de un viaje a EE.UU en los ’70. En dicho viaje Bill
+								encontró, en una tienda de bicicletas, un cartel en el que ponía que, debido a su baja
+								calidad, no se admitían bicicletas fabricadas en Argentina para su reparación.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Ese menosprecio hacia los productos del país de origen de Bill Jobs le llevó a abrir, la que
+								sería, la primera fábrica de Guayerd Bikes en 1972.
+							</p>
+							<p class = "alinear-parrafos-index">
+								El sentido que Bill Jobs le daba a su vida era la de moverse con pasión y decisión. El
+								nombre de “Guayerd” no es casual, ya que surge de la unión de tres sílabas chinas
+								Gu-ah-yerd, cuyo significado evoca la fabricación de un producto de calidad, atractivo y
+								capaz de llevar a sus usuarios al destino de la forma más placentera posible.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Bill Jobs no habría sido el mismo si no hubiese llegado a cumplir su objetivo principal de
+								ofrecer bicicletas de calidad fabricadas en suelo argentino. Otro paso importante en su
+								carrera profesional fue el lanzamiento de GUAYERD como marca propia. A diferencia de
+								otros fabricantes, Guayerd Bikes si optó por apostar por su propia marca en la que quedaría
+								patente toda la filosofía del propio Jobs. Desde que Guayerd fue fundada como marca
+								independiente, todos los cuadros y bicicletas fabricadas bajo la marca taiwanesa debían
+								cumplir con tres premisas “Gu-ah-yerd”.
+							</p>
+							<p class = "alinear-parrafos-index">
+								En 2013, GUAYERD cumplió su 25 aniversario, portando con orgullo la filosofía con la que
+								Bill Jobs fundase la primera fábrica en 1972.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Guayerd está consolidado como el segundo mayor fabricante de bicicletas, con una
+								producción anual total de más de 3 millones de bicicletas, producidas en las fábricas de
+								Argentina y China.
+							</p>
 
-						<h2>
-							Más Éxitos
-						</h2>
-						<p>
-							Durante más de una década, GUAYERD ha sido el principal patrocinador del MULTIVAN
-							GUAYERD BIKING TEAM, con el que se han obtenido éxitos a nivel internacional y en 2013
-							se amplió la colaboración y presencia de GUAYERD con el ciclismo de alta competición al
-							entrar a formar parte del LAMPRE-GUAYERD en el circuito UCI World Tour. Con este
-							movimiento, GUAYERD ponía por primera vez en sus 25 años de historia sus bicicletas a
-							competir al más alto nivel tanto en MTB como en carretera.
-						</p>
-						<p>
-							Para GUAYERD la decisión de estar presente como patrocinador en dos equipos
-							internacionales va mucho más allá de una mera cuestión de marketing. Como sucede en la
-							Fórmula 1, la estrecha colaboración entre los fabricantes y los mejores profesionales, tanto
-							ingenieros como atletas, da como resultado el mejor producto posible. Resultado de esta
-							colaboración han surgido proyectos como la BIG.NINE, NINETY-SIX, REACTO o
-							SCULTURA. Todas plataformas que han marcado un antes y un después en sus disciplinas
-							y que han recibido la aprobación de los usuarios y los reconocimientos de los medios
-							internacionales más importantes.
-						</p>
-						<p>
-							Franco Cervi es el jefe de ingenieros de GUAYERD y tú con tu GUAYERD te beneficias de
-							los conocimientos de Franco y todo su equipo de ingenieros, además de toda la experiencia
-							de profesionales como Sandro Guzmán, Pepe Sánchez o Rui Costa JR. Su éxito es nuestra
-							motivación.
-						</p>
+							<h2>
+								Innovación
+							</h2>
+							<p class = "alinear-parrafos-index">
+								La historia de cada bicicleta GUAYERD empieza sólo a 100km del lugar donde la historia de
+								la bicicleta comenzó en 1817. Justo a las afueras de Stuttgart, corazón de Alemania en
+								innovaciones del sector automovilístico y bastión de marcas líderes en tecnología como
+								Porsche o Mercedes-Benz, es donde tienen su base los diseñadores e ingenieros del
+								departamento de I+D de GUAYERD. Es aquí donde todas nuestras bicicletas se inventan,
+								planifican y desarrollan para su distribución internacional en 77 países.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Así, nuestros desarrolladores de producto no sólo tienen que tener en cuenta un montón de
+								diferentes requisitos técnicos, también tienen que garantizar que cada bicicleta de cada
+								categoría es completamente merecedora de llevar el nombre GUAYERD en sus tubos. Ya
+								se trate de una bici de montaña de alta gama, una de carretera en carbono para
+								competición, una bici eléctrica fiable o un modelo desenfadado para principiantes, sólo se
+								validan los mejores diseños que se fabricarán en colaboración con proveedores de primer
+								nivel. Para la fluidez de todos estos procesos tan estrechamente relacionados, el equipo de
+								I+D alemán viaja frecuentemente Taiwán.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Allí, nuestros expertos debaten y revisan con los especialistas taiwaneses cada paso: desde
+								el primer prototipo hasta el modelo de serie perfectamente acabado. Cada bicicleta que sale
+								completamente montada de una de las tres fábricas en Asia es realmente única. Porque
+								cuando una bici está camino a su nuevo dueño en cualquiera de los 77 países del mundo
+								en los que se distribuye GUAYERD, no sólo el departamento de I+D alemán ha infundido
+								vida en la bicicleta, sino que cada una de las personas involucradas en el proceso de
+								fabricación ha velado para que una genuina bicicleta se haya fabricado con el mayor
+								cuidado posible.
+							</p>
 
-						<h2>
-							Premios
-						</h2>
+							<h2>
+								Bicis
+							</h2>
+							<p class = "alinear-parrafos-index">
+								GUAYERD Industry Co.,Ltd, no sólo mira atrás con su experiencia de 40 años usando
+								aleaciones de materias primas clásicas que necesitan un elaborado procesamiento. Para
+								lograr la mayor calidad de bicicletas de carbono de gama alta, la compañía decidió trabajar
+								exclusivamente con proveedores de primera calidad especializados en materias
+								compuestas.
+							</p>
+							<p class = "alinear-parrafos-index">
+								El sueño que Bill Jobs tuvo en la década de los 70 es hoy una realidad. Taiwán se ha
+								convertido en un “Silicon Valley” de la industria del ciclismo. Todas las grandes marcas del
+								sector aspiran a fabricar sus bicicletas o componentes en Taiwán y ya nunca más se volverá
+								a ver un cartel en el que se rechacen productos del país asiático por su escasa calidad.
+								En sus más de 25 años de historia GUAYERD ha logrado éxitos de todo tipo, desde
+								Campeonatos del Mundo, Oros Olímpicos, reconocimientos como la mejor empresa
+								Taiwanesa e incluso reconocimientos al propio producto. En el año 2016 GUAYERD, con su
+								cuadro Scultura LTD, puso en el mercado la bicicleta de producción más ligera del mundo
+								con un peso total de solo 4,55kg y un peso del cuadro inferior a los 800g. Pero GUAYERD
+								no necesita que nadie apruebe o de el visto bueno a sus productos. Nosotros somos los que
+								mejor conocemos nuestra marca, la calidad de nuestros productos y el desarrollo que
+								implican y por ello GUAYERD ofrece garantía de por vida en todos sus cuadros, porque
+								nadie confía en nuestras bicicletas más que nosotros.
+							</p>
 
-						<table>
-							<tr>
+							<h2>
+								Más Éxitos
+							</h2>
+							<p class = "alinear-parrafos-index">
+								Durante más de una década, GUAYERD ha sido el principal patrocinador del MULTIVAN
+								GUAYERD BIKING TEAM, con el que se han obtenido éxitos a nivel internacional y en 2013
+								se amplió la colaboración y presencia de GUAYERD con el ciclismo de alta competición al
+								entrar a formar parte del LAMPRE-GUAYERD en el circuito UCI World Tour. Con este
+								movimiento, GUAYERD ponía por primera vez en sus 25 años de historia sus bicicletas a
+								competir al más alto nivel tanto en MTB como en carretera.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Para GUAYERD la decisión de estar presente como patrocinador en dos equipos
+								internacionales va mucho más allá de una mera cuestión de marketing. Como sucede en la
+								Fórmula 1, la estrecha colaboración entre los fabricantes y los mejores profesionales, tanto
+								ingenieros como atletas, da como resultado el mejor producto posible. Resultado de esta
+								colaboración han surgido proyectos como la BIG.NINE, NINETY-SIX, REACTO o
+								SCULTURA. Todas plataformas que han marcado un antes y un después en sus disciplinas
+								y que han recibido la aprobación de los usuarios y los reconocimientos de los medios
+								internacionales más importantes.
+							</p>
+							<p class = "alinear-parrafos-index">
+								Franco Cervi es el jefe de ingenieros de GUAYERD y tú con tu GUAYERD te beneficias de
+								los conocimientos de Franco y todo su equipo de ingenieros, además de toda la experiencia
+								de profesionales como Sandro Guzmán, Pepe Sánchez o Rui Costa JR. Su éxito es nuestra
+								motivación.
+							</p>
 
-								<th>
-									Año 
-								</th>
-								<th>
-									Premio
-								</th>
-							</tr>
-							<tr>
-								<td>
-									1959 
-								</td>
-								<td>
-									Mejor Bici del Mundo Mundial
-								</td>
-							</tr>
-							<tr>
+							<h2>
+								Premios
+							</h2>
 
-								<td>
-									1978 
-								</td>
-								<td>
-									Mejor Pedal para no humanos
-								</td>
-							</tr>
-							<tr>
+							<table>
+								<tr>
 
-								<td>
-									1983 
-								</td>
-								<td>
-									Gran campeón
-								</td>
-							</tr>
-							<tr>
+									<th>
+										Año 
+									</th>
+									<th>
+										Premio
+									</th>
+								</tr>
+								<tr>
+									<td>
+										1959 
+									</td>
+									<td>
+										Mejor Bici del Mundo Mundial
+									</td>
+								</tr>
+								<tr>
 
-								<td>
-									1994 
-								</td>
-								<td>
-									Premio al Diseño Experimental
-								</td>
-							</tr>	
-							<tr>
+									<td>
+										1978 
+									</td>
+									<td>
+										Mejor Pedal para no humanos
+									</td>
+								</tr>
+								<tr>
 
-								<td>
-									2006 
-								</td>
-								<td>
-									Quinto Puesto Mundial de Bicis
-								</td>
-							</tr>
+									<td>
+										1983 
+									</td>
+									<td>
+										Gran campeón
+									</td>
+								</tr>
+								<tr>
 
-						</table>
+									<td>
+										1994 
+									</td>
+									<td>
+										Premio al Diseño Experimental
+									</td>
+								</tr>	
+								<tr>
+
+									<td>
+										2006 
+									</td>
+									<td>
+										Quinto Puesto Mundial de Bicis
+									</td>
+								</tr>
+
+							</table>
+
+						</article>
 
 					</div>
 				</div>
