--- a/productos.html
+++ b/productos.html
@@ -68,16 +68,16 @@
 				<div id="main-wrapper">
 
 					<div class="container">
-
+						
+						<!-- Content -->
 						<h2 id=padding>
 							Productos
 						</h2>
 
-						<!-- Content -->
 						<article class = "products-container">
 
 							<div class = "products">
-								<img src="images/bici1.jpg" alt="Urbana Crossway 40">
+								<img src="images/bici1.jpg" alt="Urbana Crossway 40" id="ancho-imagen-producto">
 							</div>
 
 							<div class="products">
@@ -95,7 +95,7 @@
 							</div>
 
 							<div class="products">
-								<img src="images/bici2.jpg" alt="Varela Competicion Aluminio ROdado 28">
+								<img src="images/bici2.jpg" alt="Varela Competicion Aluminio ROdado 28" id="ancho-imagen-producto">
 							</div>
 
 							<div class="products">
@@ -112,7 +112,7 @@
 							</div>
 
 							<div class="products">
-								<img src="images/bici3.jpg" alt="Tanos Competicion Rodado 28">
+								<img src="images/bici3.jpg" alt="Tanos Competicion Rodado 28" id="ancho-imagen-producto">
 							</div>
 
 							<div class="products">
