--- a/contacto.html
+++ b/contacto.html
@@ -123,6 +123,7 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/one.js"></script>
 			<script src="assets/js/two.js"></script>
+			<script src="assets/js/six.js"></script>
 
 	</body>
 </html>
