--- a/ofertasPersonalizadas.html
+++ b/ofertasPersonalizadas.html
@@ -56,7 +56,7 @@
 								<ul>
 									<li><a href="index.html">Home</a></li>
 									<li><a href="productos.html">Productos</a></li>
-									<li class="current"><a href="contacto.html">Contacto</a></li>
+									<li><a href="contacto.html">Contacto</a></li>
 								</ul>
 							</nav>
 
