Agregado Footer, Gracias HTML, textura Header, Centrado Tabla Home, sessionStorage en three.js, correccion boton formulario Chrome, Correciones Mobile

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 								Premios
 							</h2>
 
-							<table>
+							<table class="tabla-index">
 								<tr>
 
 									<th>
@@ -265,7 +265,51 @@
 				</div>
 
 			<!-- Footer -->
-			
+			<div id="footer-wrapper">
+				<footer id="footer" class="container">
+					<div class="row aln-center">
+						<div class="col-3 col-6-medium col-12-small">
+
+							<!-- Links -->
+								<section class="widget links">
+									<h3 class="text-center">Mapa del sitio</h3>
+									<ul class="style2 text-center">
+										<li><a href="index.html">Home</a></li>
+										<li><a href="productos.html">Productos</a></li>
+										<li><a href="contacto.html">Contacto</a></li>
+									</ul>
+								</section>
+
+						</div>
+
+						<div class="col-3 col-6-medium col-12-small">
+
+							<!-- Contact -->
+								<section class="widget contact last">
+									<h3 class="text-center">Contáctenos</h3>
+									<ul class="text-center rrss-center">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									</ul>
+									<p class="text-center">Av. Corrientes 6237,<br />
+									C1427BPA CABA</p>
+								</section>
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12">
+							<div id="copyright">
+								<ul class="menu">
+									<li>&copy; 2021 Guayerd G4, derechos reservados.</li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</footer>
+			</div>
+
 		</div>
 
 		<!-- Scripts -->
