--- a/gracias.html
+++ b/gracias.html
@@ -125,7 +125,7 @@
 						<div class="col-12">
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2021 Guayerd G4, derechos reservados.</li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2021 Guayerd G4, derechos reservados.</li>
 								</ul>
 							</div>
 						</div>
