--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							Guayerd Bikes
 						</h2>
 
-						<article class = "contenedor-parrafos">	
+						<article class = "contenedor-parrafos">
 
 							<p class = "alinear-parrafos-index">
 								Bill Jobs (1947-2003) fue el fundador de Guayerd Bikes. Un auténtico visionario que decidió
@@ -302,7 +302,7 @@
 						<div class="col-12">
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2021 Guayerd G4, derechos reservados.</li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2021 Guayerd G4, derechos reservados.</li>
 								</ul>
 							</div>
 						</div>
