Traemos imagen de banner

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<!-- Banner -->
 				<div id="banner-wrapper">
 					<!-- MODIFICACION JUAN: Envolver img en un div#banner.box.container permitiría achicar la imagen dejando el entramado visible atras. -->
-						<img src="images/guayerdBikes-logo.jpg" alt="Banner de presentación de Guayerd Bikes" id = "ancho-imagen-banner">
+						<img src="" alt="" id = "ancho-imagen-banner">
 				</div>
 
 			<!-- Main -->
@@ -323,6 +323,7 @@
 			<script src="assets/js/one.js"></script>
 			<script src="assets/js/three.js"></script>
 			<script src="assets/js/two.js"></script>
+			<script src="assets/js/dos_traerBanner.js"></script>
 			
 			
 
